[package]
name = "exaroton-console-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = {version = "3.0.1", features = ["openssl"]}
actix = "0.13.0"
actix-codec = "0.5.0"
futures = "0.3.25"
serde = "1.0.147"
serde_json = "1.0.89"
serde_derive = "1.0.147"
bytestring = "1.2.0"
async-std = "1.12.0"
tokio = { version = "1.22.0", features = ["full"] }
toml = "0.5.2"